Fix minor layout bugs in header spacings

--- a/apps/root/styles/fragments/header.scss
+++ b/apps/root/styles/fragments/header.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: var(--spacing-md);
 
   width: 100%;
   left: 0;
@@ -18,6 +19,7 @@
     position: sticky;
     flex-direction: column;
     align-items: stretch;
+    gap: 0;
     
     top: 50%;
     width: 50%;
@@ -54,7 +56,12 @@
   }
 
   .icon-logo {
+    max-width: 220px;
     fill: var(--color-terminal-blue);
+
+    @media (--large) {
+      max-width: none;
+    }
   }
 
   .cta.secondary {
