--- a/apps/root/styles/fragments/project-heading.scss
+++ b/apps/root/styles/fragments/project-heading.scss
@@ -20,7 +20,7 @@
       }
     }
 
-    .title > * {
+    .title > h1 {
       margin: 0;
     }
 
